# rag_mgi

./: .gitignore  README.md  pyproject.toml  requirements.txt
mcp-client/: mcp_client.py
mcp-servidores/: mcp_CEITEC.py  mcp_IMBEL.py  mcp_Telebras.py
rag_2/: rag_rebuild_from_postgres.py  update_vectordb_from_postgres.py
